[package]
name = "network-latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
rand = "0.8.4"

tokio = { version = "1.12", features = ["full"] }
tonic = "0.6.1"
prost = "0.9"
prost-types = "0.9"

[build-dependencies]
tonic-build = "0.6"
